<resources>
    <string name="app_name">AndroidArshinsky71</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="_mult">*</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_eval">=</string>

    <string name="_div">/</string>
    <string name="_sign">+/-</string>
    <string name="_proc">%</string>
    <string name="_reset">C</string>
    <string name="a">a</string>
    <string name="r">r</string>
    <string name="s">s</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="n">n</string>
</resources>
